deploy: 3eb5e33e9cbbbbefd56692d1bb6b3a5227551834

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Zero Hash Matching Engine FIX API Documentation</title>
-    <link rel="icon" type="image/x-icon" href="https://midchains.com/static/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://zerohash.com/assets/images/Favicon.ico/favicon-32x32.png">
     <style media="screen">
       .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
@@ -282,7 +282,7 @@
   color: #859900;
 }
     </style>
-    <link href="stylesheets/screen-c1792aa9.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/screen-d5d99dd5.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print-ee4763c3.css" rel="stylesheet" media="print" />
       <script src="javascripts/all-e033bdd3.js"></script>
 
