deploy: 8beee69ca1b945513dbc8b3888fac1ac8116a0e0

--- a/index.html
+++ b/index.html
@@ -483,8 +483,6 @@ SenderComp: <code>FIRM-SENDER-COMP-2</code></p>
 
 <p>TargetCompID: <code>ZERO</code></p>
 <h1 id='7c87180da7'><br/></h1><h1 id='session-level-messages'>SESSION LEVEL MESSAGES</h1><h3 id='message-header'>Message Header</h3>
-<p><br/></p>
-
 <table><thead>
 <tr>
 <th>Tag</th>
@@ -890,13 +888,13 @@ ER FILL
 <td>55</td>
 <td>Symbol</td>
 <td>Yes</td>
-<td>Symbol of instrument</td>
+<td>Symbol of instrument (Part of Instrument Component)</td>
 </tr>
 <tr>
 <td>48</td>
 <td>SecurityID</td>
 <td>Yes</td>
-<td>Security ID of instrument, usually same as symbol</td>
+<td>Security ID of instrument, usually same as symbol (Part of Instrument Component)</td>
 </tr>
 <tr>
 <td>54</td>
@@ -949,7 +947,7 @@ ER FILL
 <tr>
 <td></td>
 <td>Instrument</td>
-<td>Yes</td>
+<td>No</td>
 <td>Component Fields can be found in appendix</td>
 </tr>
 <tr>
