deploy: 933d9fecf0669631eff6193adff6d029f60aa759

--- a/index.html
+++ b/index.html
@@ -1474,6 +1474,12 @@ The FIX message would appear as
 <td>0 = SNAPSHOT <br/> 1 = SNAPSHOT_PLUS_UPDATES <br/> 2 = DISABLE_PREVIOUS_SNAPSHOT_PLUS_UPDATE_REQUEST</td>
 </tr>
 <tr>
+<td>264</td>
+<td>MarketDepth</td>
+<td></td>
+<td>0 = FULL_BOOK <br/> 1 = TOP_OF_BOOK</td>
+</tr>
+<tr>
 <td></td>
 <td>Standard Trailer</td>
 <td></td>
